--- a/console2/package.json
+++ b/console2/package.json
@@ -35,6 +35,7 @@
     "dependencies": {
         "@monaco-editor/react": "4.3.1",
         "ansi_up": "4.0.4",
+        "caniuse-lite": "^1.0.30001367",
         "connected-react-router": "6.9.2",
         "constate": "3.3.0",
         "copy-to-clipboard": "3.3.1",
@@ -60,8 +61,8 @@
         "semantic-ui-calendar-react": "0.15.3",
         "semantic-ui-css": "2.4.1",
         "semantic-ui-react": "2.0.4",
-        "styled-tools": "1.7.2",
         "styled-components": "5.3.3",
+        "styled-tools": "1.7.2",
         "typeface-lato": "1.1.13",
         "url-search-params-polyfill": "8.1.1"
     },
